parser.output
   0  $accept : %entry% $end

   1  main : declarations statements EOF
   2       | error

   3  declarations :
   4               | declaration declarations

   5  statements :
   6             | statement statements

   7  declaration : VARDCL IDENTIFIER COLON FLOATDCL SEMICOLON
   8              | VARDCL IDENTIFIER COLON INTDCL SEMICOLON

   9  statement : IDENTIFIER ASSIGN expression SEMICOLON
  10            | PRINT IDENTIFIER SEMICOLON
  11            | READ IDENTIFIER SEMICOLON
  12            | IF expression THEN statements ELSE statements ENDIF

  13  expression : value
  14             | value ADD expression
  15             | value SUB expression
  16             | value TIMES expression
  17             | value DIV expression
  18             | SUB expression

  19  value : IDENTIFIER
  20        | INTLITERAL
  21        | FLOATLITERAL

  22  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (22)
	declarations : .  (3)

	error  shift 3
	VARDCL  shift 4
	EOF  reduce 3
	IDENTIFIER  reduce 3
	READ  reduce 3
	PRINT  reduce 3
	IF  reduce 3

	main  goto 5
	declarations  goto 6
	declaration  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	main : error .  (2)

	.  reduce 2


state 4
	declaration : VARDCL . IDENTIFIER COLON FLOATDCL SEMICOLON  (7)
	declaration : VARDCL . IDENTIFIER COLON INTDCL SEMICOLON  (8)

	IDENTIFIER  shift 8
	.  error


state 5
	%entry% : '\001' main .  (22)

	.  reduce 22


state 6
	main : declarations . statements EOF  (1)
	statements : .  (5)

	IDENTIFIER  shift 9
	READ  shift 10
	PRINT  shift 11
	IF  shift 12
	EOF  reduce 5

	statements  goto 13
	statement  goto 14


state 7
	declarations : declaration . declarations  (4)
	declarations : .  (3)

	VARDCL  shift 4
	EOF  reduce 3
	IDENTIFIER  reduce 3
	READ  reduce 3
	PRINT  reduce 3
	IF  reduce 3

	declarations  goto 15
	declaration  goto 7


state 8
	declaration : VARDCL IDENTIFIER . COLON FLOATDCL SEMICOLON  (7)
	declaration : VARDCL IDENTIFIER . COLON INTDCL SEMICOLON  (8)

	COLON  shift 16
	.  error


state 9
	statement : IDENTIFIER . ASSIGN expression SEMICOLON  (9)

	ASSIGN  shift 17
	.  error


state 10
	statement : READ . IDENTIFIER SEMICOLON  (11)

	IDENTIFIER  shift 18
	.  error


state 11
	statement : PRINT . IDENTIFIER SEMICOLON  (10)

	IDENTIFIER  shift 19
	.  error


state 12
	statement : IF . expression THEN statements ELSE statements ENDIF  (12)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 24
	value  goto 25


state 13
	main : declarations statements . EOF  (1)

	EOF  shift 26
	.  error


state 14
	statements : statement . statements  (6)
	statements : .  (5)

	IDENTIFIER  shift 9
	READ  shift 10
	PRINT  shift 11
	IF  shift 12
	EOF  reduce 5
	ELSE  reduce 5
	ENDIF  reduce 5

	statements  goto 27
	statement  goto 14


state 15
	declarations : declaration declarations .  (4)

	.  reduce 4


state 16
	declaration : VARDCL IDENTIFIER COLON . FLOATDCL SEMICOLON  (7)
	declaration : VARDCL IDENTIFIER COLON . INTDCL SEMICOLON  (8)

	INTDCL  shift 28
	FLOATDCL  shift 29
	.  error


state 17
	statement : IDENTIFIER ASSIGN . expression SEMICOLON  (9)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 30
	value  goto 25


state 18
	statement : READ IDENTIFIER . SEMICOLON  (11)

	SEMICOLON  shift 31
	.  error


state 19
	statement : PRINT IDENTIFIER . SEMICOLON  (10)

	SEMICOLON  shift 32
	.  error


state 20
	value : IDENTIFIER .  (19)

	.  reduce 19


state 21
	value : INTLITERAL .  (20)

	.  reduce 20


state 22
	value : FLOATLITERAL .  (21)

	.  reduce 21


state 23
	expression : SUB . expression  (18)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 33
	value  goto 25


state 24
	statement : IF expression . THEN statements ELSE statements ENDIF  (12)

	THEN  shift 34
	.  error


state 25
	expression : value .  (13)
	expression : value . ADD expression  (14)
	expression : value . SUB expression  (15)
	expression : value . TIMES expression  (16)
	expression : value . DIV expression  (17)

	ADD  shift 35
	SUB  shift 36
	TIMES  shift 37
	DIV  shift 38
	THEN  reduce 13
	SEMICOLON  reduce 13


state 26
	main : declarations statements EOF .  (1)

	.  reduce 1


state 27
	statements : statement statements .  (6)

	.  reduce 6


state 28
	declaration : VARDCL IDENTIFIER COLON INTDCL . SEMICOLON  (8)

	SEMICOLON  shift 39
	.  error


state 29
	declaration : VARDCL IDENTIFIER COLON FLOATDCL . SEMICOLON  (7)

	SEMICOLON  shift 40
	.  error


state 30
	statement : IDENTIFIER ASSIGN expression . SEMICOLON  (9)

	SEMICOLON  shift 41
	.  error


state 31
	statement : READ IDENTIFIER SEMICOLON .  (11)

	.  reduce 11


state 32
	statement : PRINT IDENTIFIER SEMICOLON .  (10)

	.  reduce 10


state 33
	expression : SUB expression .  (18)

	.  reduce 18


state 34
	statement : IF expression THEN . statements ELSE statements ENDIF  (12)
	statements : .  (5)

	IDENTIFIER  shift 9
	READ  shift 10
	PRINT  shift 11
	IF  shift 12
	ELSE  reduce 5

	statements  goto 42
	statement  goto 14


state 35
	expression : value ADD . expression  (14)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 43
	value  goto 25


state 36
	expression : value SUB . expression  (15)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 44
	value  goto 25


state 37
	expression : value TIMES . expression  (16)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 45
	value  goto 25


state 38
	expression : value DIV . expression  (17)

	IDENTIFIER  shift 20
	INTLITERAL  shift 21
	FLOATLITERAL  shift 22
	SUB  shift 23
	.  error

	expression  goto 46
	value  goto 25


state 39
	declaration : VARDCL IDENTIFIER COLON INTDCL SEMICOLON .  (8)

	.  reduce 8


state 40
	declaration : VARDCL IDENTIFIER COLON FLOATDCL SEMICOLON .  (7)

	.  reduce 7


state 41
	statement : IDENTIFIER ASSIGN expression SEMICOLON .  (9)

	.  reduce 9


state 42
	statement : IF expression THEN statements . ELSE statements ENDIF  (12)

	ELSE  shift 47
	.  error


state 43
	expression : value ADD expression .  (14)

	.  reduce 14


state 44
	expression : value SUB expression .  (15)

	.  reduce 15


state 45
	expression : value TIMES expression .  (16)

	.  reduce 16


state 46
	expression : value DIV expression .  (17)

	.  reduce 17


state 47
	statement : IF expression THEN statements ELSE . statements ENDIF  (12)
	statements : .  (5)

	IDENTIFIER  shift 9
	READ  shift 10
	PRINT  shift 11
	IF  shift 12
	ENDIF  reduce 5

	statements  goto 48
	statement  goto 14


state 48
	statement : IF expression THEN statements ELSE statements . ENDIF  (12)

	ENDIF  shift 49
	.  error


state 49
	statement : IF expression THEN statements ELSE statements ENDIF .  (12)

	.  reduce 12


25 terminals, 9 nonterminals
23 grammar rules, 50 states
